feat(harvestables): better harvestables categories handling, removed unused things and better code struct